<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:background="@color/title"

        android:paddingTop="54dp"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="42sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/module"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"

            android:gravity="bottom|start"
            android:paddingBottom="5dp"
            android:text="@string/loginFirstName" />

        <EditText
            android:id="@+id/loginFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/background"
            android:inputType="textCapWords"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"

            android:gravity="bottom|start"
            android:paddingBottom="5dp"
            android:text="@string/loginLastName" />

        <EditText
            android:id="@+id/loginLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/background"
            android:inputType="textCapWords"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"

            android:gravity="bottom|start"
            android:paddingBottom="5dp"
            android:text="@string/loginEmail" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/background"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/button"
            android:text="@string/loginBtn"
            android:textAllCaps="true"
            android:textColor="#000"
            app:cornerRadius="100dp" />

    </LinearLayout>

</LinearLayout>